...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:url="@{nutritionViewModel.url}"
                    tools:src="@drawable/il_shower_rain" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:clickable="true"
                    android:contentDescription="@string/fab_profilepic_desc"
...
                    android:hint="@string/text_nutrition_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_preview">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text='@{nutritionViewModel.nutritionEdit.name ?? ""}'
                        app:bindLoadingEditTextState="@{nutritionViewModel.viewState}" />

                </com.google.android.material.textfield.TextInputLayout>
...
                    android:hint="@string/text_ppm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tf_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_ppm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:text='@{nutritionViewModel.nutritionEdit.ppm != null ? String.valueOf(nutritionViewModel.nutritionEdit.ppm) : ""}'
                        app:bindLoadingEditTextState="@{nutritionViewModel.viewState}" />

...
                    android:hint="@string/text_nutrient_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tf_ppm">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text='@{nutritionViewModel.nutritionEdit.nutrientContent ?? ""}'
                        app:bindLoadingEditTextState="@{nutritionViewModel.viewState}" />

                </com.google.android.material.textfield.TextInputLayout>
...
                    android:hint="@string/text_how_usage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tf_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_usage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:lines="4"
                        android:maxLines="5"
                        android:minLines="3"
...
                    android:hint="@string/text_nutrient_effect"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tf_usage">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_effect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text='@{nutritionViewModel.nutritionEdit.effect ?? ""}'
                        app:bindLoadingEditTextState="@{nutritionViewModel.viewState}" />

                </com.google.android.material.textfield.TextInputLayout>
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tf_effect">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:lines="6"
                        android:maxLines="8"
                        android:minLines="4"
...

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:src="@drawable/leku_ic_check_light"
...
