...
                    app:shimmer_duration="800">

                    <include layout="@layout/layout_weather_placeholder" />
                </com.facebook.shimmer.ShimmerFrameLayout>

                <include
                    android:id="@+id/weather_layout"
                    layout="@layout/layout_weather" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/weather_error"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...
                app:icon="@drawable/ic_refresh_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_tank_error" />

            <TextView
                android:id="@+id/tv_schedule_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:text="@string/text_schedule"
...
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_tank" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                app:layout_constraintBottom_toBottomOf="@+id/spinner"
                app:layout_constraintEnd_toStartOf="@+id/spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spinner"
                tools:text="Senin, 15 November 2020" />

            <Spinner
...
