<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_black"
        android:title="@string/text_home" />
    <item
        android:id="@+id/devicesFragment"
        android:icon="@drawable/ic_sensors_black"
        android:title="@string/text_devices" />
    <item
        android:id="@+id/encyclopediaFragment"
        android:icon="@drawable/ic_library_books_black"
        android:title="@string/text_encyclopedia" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings_black"
        android:title="@string/text_settings" />
</menu>